Adding forgotten test.